# voxel-2d-rs

./: Cargo.toml  README.md  build.sh
src/: lib.rs
src/graphics/: context2d.rs  mod.rs
src/traversal/: cpu.rs  mod.rs  ray.rs  voxel.rs
voxel-2d-rs-web/: package-lock.json  package.json
voxel-2d-rs-web/src/: app.css
voxel-2d-rs-web/src/lib/: example.svelte
voxel-2d-rs-web/src/routes/: +page.svelte
