[package]
name = "voxel2d_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.33.0"
nalgebra-glm = "0.19.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.70"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]
